<resources>
    <string name="app_name">Guessing game</string>
    <string name="about">About</string>
    <string name="insideAbout">App made by Tomas Petreikis.</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="animation">Animation</string>
    <string name="title_activity_play">Play</string>
    <string name="game_guess_number">Guess number</string>
    <string name="difficulty">Difficulty</string>
    <string name="guess">Guess</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="highscores">Highscores</string>
    <string name="id">ID</string>
    <string name="score">Score</string>
    <string-array name="pick_difficulty">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string name="winner">You won!</string>
    <string name="loser">You lost!</string>

</resources>
