<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/animationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/animation" />

    <Button

        android:id="@+id/button2"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:background="@drawable/buttonshape1"
        android:fontFamily="@font/nosifer"
        android:onClick="onPlayClick"
        android:shadowColor="#000000"
        android:shadowDx="5"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/play"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        tools:text="@string/play" />

    <Button
        android:id="@+id/button1"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:background="@drawable/buttonshape5"
        android:fontFamily="@font/nosifer"
        android:onClick="onHighscoresClick"
        android:shadowColor="#000000"
        android:shadowDx="5"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/highscores"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        tools:text="@string/highscores" />

    <Button
        android:id="@+id/button3"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:background="@drawable/buttonshape2"
        android:fontFamily="@font/nosifer"
        android:onClick="onSettingsClick"
        android:shadowColor="#000000"
        android:shadowDx="5"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/settings"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        tools:text="@string/settings" />

    <Button
        android:id="@+id/button4"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:background="@drawable/buttonshape3"
        android:fontFamily="@font/nosifer"
        android:onClick="onAboutClick"
        android:shadowColor="#000000"
        android:shadowDx="5"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/about"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        tools:text="@string/about" />

</LinearLayout>